<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ConvidadoFormActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="20dp"
        android:paddingLeft="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_shadow_start_color"></View>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:gravity="center"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_shadow_start_color"></View>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:id="@+id/radio_group">
        <RadioButton
            android:id="@+id/radio_not_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/nao_confirmado"/>
        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/presente"/>
        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/ausente"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/cardview_shadow_start_color"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp" />
    </LinearLayout>


</LinearLayout>