<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FragmentTodos">

    <LinearLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_shadow_start_color"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:text="@string/presente" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:text="@string/ausente" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:text="@string/nao_confirmado" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:text="@string/menu_todos" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_shadow_start_color"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_presente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/presente" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:id="@+id/text_ausente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/ausente" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:id="@+id/text_nao_confirmado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/nao_confirmado" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_start_color"></View>

            <TextView
                android:id="@+id/text_todos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:gravity="center"
                android:text="@string/menu_todos" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/cardview_dark_background"></View>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_convidados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dashboard" />

</RelativeLayout>